[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/JosefinSans-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -576.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.329412, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 16.0
margin_right = 160.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
text = "Level: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -136.0
margin_right = -16.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
text = "Moves: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousBestLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_right = 96.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
text = "Previous best: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 57.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
disabled = true
enabled_focus_mode = 0
text = "Menu"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
visible = false
margin_left = 80.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 57.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
enabled_focus_mode = 0
text = "Next"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="Button" parent="."]
margin_left = 504.0
margin_top = 32.0
margin_right = 560.0
margin_bottom = 57.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
disabled = true
enabled_focus_mode = 0
text = "Undo"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="."]
margin_left = 440.0
margin_top = 32.0
margin_right = 496.0
margin_bottom = 57.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.870588, 1, 0.839216, 1 )
disabled = true
enabled_focus_mode = 0
text = "Reset"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
